tree-sitter-anima/corpus/declarations.txt
================================================================================
Module declaration
================================================================================

module HelloWorld

--------------------------------------------------------------------------------

(program
  (module_declaration
    name: (qualified_identifier
      (identifier)
      (identifier))))

================================================================================
Import declaration
================================================================================

import { println } from "anima/io"

--------------------------------------------------------------------------------

(program
  (import_declaration
    (identifier)
    (string_literal)))

================================================================================
Import with alias
================================================================================

import { recommend } from "./recommendation" as rec

--------------------------------------------------------------------------------

(program
  (import_declaration
    (identifier)
    (string_literal)
    alias: (identifier)))

================================================================================
Simple function
================================================================================

fun add(a: Int, b: Int): Int = a + b

--------------------------------------------------------------------------------

(program
  (function_declaration
    name: (identifier)
    parameters: (parameter_list
      (parameter
        name: (identifier)
        type: (primitive_type))
      (parameter
        name: (identifier)
        type: (primitive_type)))
    return_type: (primitive_type)
    body: (binary_expression
      left: (identifier)
      right: (identifier))))

================================================================================
Function with block body
================================================================================

fun greet(name: String): String {
    return "hello"
}

--------------------------------------------------------------------------------

(program
  (function_declaration
    name: (identifier)
    parameters: (parameter_list
      (parameter
        name: (identifier)
        type: (primitive_type)))
    return_type: (primitive_type)
    body: (block
      (return_statement
        value: (string_literal)))))

================================================================================
Data entity
================================================================================

data entity Person(
    val name: String,
    val age: Int
) {
    invariant { age >= 0 }
}

--------------------------------------------------------------------------------

(program
  (entity_declaration
    name: (identifier)
    (field_parameter
      name: (identifier)
      type: (primitive_type))
    (field_parameter
      name: (identifier)
      type: (primitive_type))
    body: (entity_body
      (invariant_clause
        (block
          (expression_statement
            (binary_expression
              left: (identifier)
              right: (int_literal))))))))

================================================================================
Type alias
================================================================================

type Feed = List<Post>

--------------------------------------------------------------------------------

(program
  (type_alias
    name: (identifier)
    type: (generic_type
      (type_identifier
        (identifier)))))

================================================================================
Sealed class
================================================================================

sealed class Result<T> {
    data class Ok<T>(val value: T) : Result<T>()
    object Pending : Result<Nothing>()
}

--------------------------------------------------------------------------------

(program
  (sealed_declaration
    name: (identifier)
    (type_parameters
      (type_parameter
        name: (identifier)))
    (sealed_member
      (sealed_data_class
        name: (identifier)
        (field_parameter
          name: (identifier)
          type: (type_identifier
            (identifier)))
        supertype: (type_identifier
          (identifier)
          (type_arguments
            (type_identifier
              (identifier))))))
    (sealed_member
      (sealed_object
        name: (identifier)
        supertype: (type_identifier
          (identifier)
          (type_arguments
            (primitive_type)))))))

================================================================================
Interface
================================================================================

interface Rankable {
    val score: Float
    fun compareTo(other: Rankable): Int
}

--------------------------------------------------------------------------------

(program
  (interface_declaration
    name: (identifier)
    (abstract_field
      name: (identifier)
      type: (primitive_type))
    (function_signature
      name: (identifier)
      parameters: (parameter_list
        (parameter
          name: (identifier)
          type: (type_identifier
            (identifier))))
      return_type: (primitive_type))))
