tree-sitter-anima/corpus/delegation.txt
================================================================================
Field with by delegation in a context
================================================================================

context Mem { persistent { val data: String by stored() } }

--------------------------------------------------------------------------------

(program
  (context_declaration
    name: (identifier)
    (context_tier
      (field_declaration
        name: (identifier)
        type: (primitive_type)
        delegate: (call_expression
          function: (identifier))))))
