tree-sitter-anima/corpus/new-expressions.txt
================================================================================
Index expression
================================================================================

fun test() { val x = items[0] }

--------------------------------------------------------------------------------

(program
  (function_declaration
    name: (identifier)
    parameters: (parameter_list)
    body: (block
      (val_declaration
        pattern: (identifier)
        value: (index_expression
          object: (identifier)
          index: (int_literal))))))

================================================================================
If with bare expressions
================================================================================

fun abs(x: Int): Int = if (x > 0) x else -x

--------------------------------------------------------------------------------

(program
  (function_declaration
    name: (identifier)
    parameters: (parameter_list
      (parameter
        name: (identifier)
        type: (primitive_type)))
    return_type: (primitive_type)
    body: (if_expression
      condition: (binary_expression
        left: (identifier)
        right: (int_literal))
      consequence: (identifier)
      alternative: (unary_expression
        operand: (identifier)))))

================================================================================
Postfix increment
================================================================================

fun test() { count++ }

--------------------------------------------------------------------------------

(program
  (function_declaration
    name: (identifier)
    parameters: (parameter_list)
    body: (block
      (expression_statement
        (postfix_update_expression
          operand: (identifier))))))

================================================================================
Binary to
================================================================================

fun test() { val pair = 1 to 2 }

--------------------------------------------------------------------------------

(program
  (function_declaration
    name: (identifier)
    parameters: (parameter_list)
    body: (block
      (val_declaration
        pattern: (identifier)
        value: (binary_expression
          left: (int_literal)
          right: (int_literal))))))

================================================================================
Trailing lambda without parens
================================================================================

fun test() { items.filter { it > 0 } }

--------------------------------------------------------------------------------

(program
  (function_declaration
    name: (identifier)
    parameters: (parameter_list)
    body: (block
      (expression_statement
        (call_expression
          function: (qualified_identifier
            (identifier)
            (identifier))
          trailing_lambda: (lambda_expression
            (expression_statement
              (binary_expression
                left: (identifier)
                right: (int_literal)))))))))
