tree-sitter-anima/corpus/types.txt
================================================================================
Primitive types
================================================================================

fun id(x: Int): Int = x

--------------------------------------------------------------------------------

(program
  (function_declaration
    name: (identifier)
    parameters: (parameter_list
      (parameter
        name: (identifier)
        type: (primitive_type)))
    return_type: (primitive_type)
    body: (identifier)))

================================================================================
Nullable type
================================================================================

fun maybe(x: String?): String {
    return x ?: "default"
}

--------------------------------------------------------------------------------

(program
  (function_declaration
    name: (identifier)
    parameters: (parameter_list
      (parameter
        name: (identifier)
        type: (nullable_type
          (primitive_type))))
    return_type: (primitive_type)
    body: (block
      (return_statement
        value: (elvis_expression
          value: (identifier)
          fallback: (string_literal))))))

================================================================================
Generic types
================================================================================

fun first(items: List<String>): String {
    return items
}

--------------------------------------------------------------------------------

(program
  (function_declaration
    name: (identifier)
    parameters: (parameter_list
      (parameter
        name: (identifier)
        type: (generic_type
          (primitive_type))))
    return_type: (primitive_type)
    body: (block
      (return_statement
        value: (identifier)))))

================================================================================
NL type
================================================================================

intent fun summarize(doc: NL<Article>): NL {
    ensure { output.length < 100 }
}

--------------------------------------------------------------------------------

(program
  (intent_declaration
    name: (identifier)
    parameters: (parameter_list
      (parameter
        name: (identifier)
        type: (nl_type
          (identifier))))
    return_type: (nl_type)
    body: (intent_body
      (ensure_clause
        (block
          (expression_statement
            (binary_expression
              left: (member_expression
                object: (identifier)
                member: (identifier))
              right: (int_literal))))))))

================================================================================
Fuzzy predicate
================================================================================

fuzzy fun String.isReadable(): Boolean {
    factors {
        length < 100 weight 0.5
        words > 3 weight 0.5
    }
}

--------------------------------------------------------------------------------

(program
  (fuzzy_declaration
    receiver: (primitive_type)
    name: (identifier)
    parameters: (parameter_list)
    body: (fuzzy_body
      (factors_block
        (factor
          condition: (binary_expression
            left: (identifier)
            right: (int_literal))
          value: (float_literal))
        (factor
          condition: (binary_expression
            left: (identifier)
            right: (int_literal))
          value: (float_literal))))))
