tree-sitter-anima/test/corpus/diagnosable.txt
================================================================================
Simple diagnosable class
================================================================================

diagnosable class MyError(val code: Int) : BaseError() { diagnose { check { validate() } yields "result" } }

--------------------------------------------------------------------------------

(program
  (diagnosable_declaration
    name: (identifier)
    (field_parameter
      name: (identifier)
      type: (primitive_type))
    supertype: (type_identifier
      (identifier))
    (diagnose_block
      (diagnose_check
        (block
          (expression_statement
            (call_expression
              function: (identifier))))
        (string_template
          (string_content))))))

================================================================================
Diagnosable with suggest block
================================================================================

diagnosable class MyError(val id: ID) { suggest { "Fix suggestion" } }

--------------------------------------------------------------------------------

(program
  (diagnosable_declaration
    name: (identifier)
    (field_parameter
      name: (identifier)
      type: (primitive_type))
    (suggest_block
      (string_template
        (string_content)))))
